[tool.poetry]
name = "botorch-custom-surrogate-experiment"
version = "0.1.0"
description = "BoTorch custom surrogate experiments."
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ax-platform = "^1.2.1"
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
jupyterlab = "^4.3.1"
botorch = "^0.16.1"
gpytorch = "^1.15.1"
pyro-ppl = "^1.9.1"
pyro-api = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
